# Exam-Managment-System---C-Lab-Project-UE21CS141B-UE21CS111B

./: A.c  A.h  CMakeLists.txt  LICENSE  README.md  add.c  add.h  definition.h  delete.c  delete.h  draft.c  eligiblestudents.c  eligiblestudents.h  execute.c  execute.h  hello.txt  main.c  main.h  print_student.c  print_student.h
